Make {Queue,SizedQueue}#freeze raise TypeError

Fixes [Bug #17146]